docs(docs-infra): fix docs pages overflow when specific example-viewer exists
enforce content to be fluid until a specific max width, and rollback breakpoints to be applied when 1430px is the current win size
as widths between 1430px and 1431px will be broken

--- a/adev/src/app/features/references/api-reference-details-page/api-reference-details-page.component.scss
+++ b/adev/src/app/features/references/api-reference-details-page/api-reference-details-page.component.scss
@@ -11,7 +11,7 @@
 
 
   //applying styles when TOC position got translated to the top right 
-  @media only screen and (min-width: 1431px) {
+  @include mq.for-large-desktop-up {
     // take the available space except a reserved area for TOC
     width: calc(100% - 16rem);
   }
@@ -23,7 +23,7 @@
     width: 100%;
 
     //applying styles when TOC position got translated to the top right 
-    @media only screen and (min-width: 1431px) {
+    @include mq.for-large-desktop-up {
       // take the available space except a reserved area for TOC
       max-width: var(--page-width);
     }
@@ -39,7 +39,7 @@
   &>* {
     padding-inline: 0px;
 
-    @include mq.for-big-desktop-up {
+    @include mq.for-extra-large-desktop-up {
       width: var(--page-width);
     }
   }
